[gd_scene load_steps=11 format=3 uid="uid://ccx1vbth7yagu"]

[ext_resource type="Script" path="res://Levels/base/title_card.gd" id="1_jbm3j"]

[sub_resource type="Gradient" id="Gradient_u4kg6"]
offsets = PackedFloat32Array(0, 0.169355)
colors = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_qhowr"]
gradient = SubResource("Gradient_u4kg6")

[sub_resource type="SystemFont" id="SystemFont_dfm6k"]
font_names = PackedStringArray("Impact")
subpixel_positioning = 0

[sub_resource type="LabelSettings" id="LabelSettings_ep43p"]
font = SubResource("SystemFont_dfm6k")
font_size = 76
outline_size = 24
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_0g80x"]
font = SubResource("SystemFont_dfm6k")
font_size = 53
outline_size = 13
outline_color = Color(0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_t7a7a"]
resource_name = "fadeout"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333333, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_xfsb6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_udr3l"]
resource_name = "fadein"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.466667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dgbyn"]
_data = {
"RESET": SubResource("Animation_xfsb6"),
"fadein": SubResource("Animation_udr3l"),
"fadeout": SubResource("Animation_t7a7a")
}

[node name="TitleCard" type="Control"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
script = ExtResource("1_jbm3j")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture1D_qhowr")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 50

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="LevelName" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "NAME OF LEVEL"
label_settings = SubResource("LabelSettings_ep43p")

[node name="LevelDescription" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "DESCRIPTION OF LEVEL"
label_settings = SubResource("LabelSettings_0g80x")

[node name="FadeoutTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_dgbyn")
}

[connection signal="timeout" from="FadeoutTimer" to="." method="_on_fadeout_timer_timeout"]
